--- a/style.css
+++ b/style.css
@@ -1,14 +1,52 @@
-:root {
+* 
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
-img {
-    height: 210px;
-    width: 200px;
-    margin-right: 30px;
-    border-radius: 50%;
+body {
+    background-color: lightseagreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
-.info {
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 1000px;
+    min-height: 1000px;
+    margin: 50px;
+    background-color: #fff;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
+}
+
+.container .left-side {
+    position: relative;
+    background-color: #003147;
+    padding: 40px;
+}
+
+img {
+    height: 300px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+.profileText {
+    position: relative;
+
+}
+
+.container .right-side {
+    position: relative;
+    background-color: #fff;
+    padding: 40px;
 }
