--- a/style.css
+++ b/style.css
@@ -32,21 +32,105 @@ body {
     padding: 40px;
 }
 
-img {
-    height: 300px;
+.profileText {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
+    border-bottom: 1px solid grey;
 }
 
-.profileText {
+.img {
     position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+}
 
+.profileText .img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profileText h2 {
+    color: #fff;
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: 600;
+    line-height: 1.4em;
+}
+
+.profileText h2 span {
+    font-size: 0.8em;
+    font-weight: 300;
+}
+
+.contact-info {
+    padding-top: 40px;
+}
+
+.title {
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin-bottom: 20px;
+}
+
+.contact-info ul {
+    position: relative;
+}
+
+.contact-info ul li {
+    position: relative;
+    list-style: none;
+    margin: 10px 0;
+    cursor: pointer;
+}
+
+.contact-info ul li .icon {
+    display: inline-block;
+    width: 30px;
+    font-size: 18px;
+    color: #03a9f4;
+}
+
+.contact-info ul li span{
+    color: #fff;
+    font-weight: 300;
+}
+
+.contact-info.education li {
+    margin-bottom: 15px;
+}
+
+.contact-info.education h5 {
+    color: #03a9f4;
+    font-weight: 500;
+}
+
+.contact-info.education h4 {
+    color: #fff;
+    font-weight: 500;
+}
+
+.contact-info.language .percent {
+    position: relative;
+    width: 100%;
+    height: 6px;
+    background: #081921;
+    display: block;
 }
 
 .container .right-side {
     position: relative;
     background-color: #fff;
     padding: 40px;
+    margin-top: 5px;
 }
