--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ body {
 
 .about {
     margin-bottom: 50px;
+    font-size: 20px;
 }
 
 .about:last-child {
@@ -157,6 +158,10 @@ body {
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 10px;
+}
+
+.title2 p {
+    font-size: 20px;
 }
 
 p {
@@ -189,4 +194,19 @@ p {
     text-transform: uppercase;
     color: #848c90;
     font-weight: 500;
+}
+
+.skills .box .percent {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #f0f0f0;
+}
+
+.skills .box .percent div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #03a9f4;
 }
