--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: lightseagreen;
+    background-color: rgb(28, 28, 28);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,12 +23,11 @@ body {
     background-color: #fff;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
 }
 
 .container .left-side {
     position: relative;
-    background-color: #003147;
+    background-color: #9f566c;
     padding: 40px;
 }
 
@@ -98,7 +97,7 @@ body {
     display: inline-block;
     width: 30px;
     font-size: 18px;
-    color: #03a9f4;
+    color: #efc4d1;
 }
 
 .contact-info ul li span{
@@ -111,7 +110,7 @@ body {
 }
 
 .contact-info.education h5 {
-    color: #03a9f4;
+    color: #efc4d1;
     font-weight: 500;
 }
 
@@ -124,7 +123,7 @@ body {
     position: relative;
     width: 100%;
     height: 6px;
-    background: #081921;
+    background: rgb(254, 254, 254);
     display: block;
     margin-top: 5px;
 }
@@ -134,7 +133,7 @@ body {
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
+    background: #efc4d1;
 }
 
 .container .right-side {
@@ -208,5 +207,5 @@ p {
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
+    background: #efc4d1;
 }
